--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,8 +1,9 @@
+body * { font-family: 'Open Sans', sans-serif; font-size:12px}
+
 .App {
     display: flex;
     flex-direction: column;
     align-items: center;
-
     // Remove from DOM so that width and height are calculated based window size rather than on parent size
     position: absolute;
     width: 100%;
