--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,17 +1,28 @@
-body * { font-family: 'Open Sans', sans-serif; font-size:12px}
+body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
 
 .App {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     align-items: center;
-    // Remove from DOM so that width and height are calculated based window size rather than on parent size
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    background:#F7F7F7
 }
+
+.App > * {
+    flex: 1 100%;
+  }
+
+/* Header */
+header {background-color:#2196F3;  padding:0 72px; height:56px;}
+header h1{color:#fff; font-size:20px}
+
+/* Form Name section */
+#form-name-section {border-bottom:1px solid #D5D5D5; line-height: 96px; background-color: #fff; padding:0 72px}
+#form-name { font-size:24px; border:0 none; margin:0 }
+
 
 .content {
     flex: 1;
+    padding:0;
 }
 
 .field {
