Label name added

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
 body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
-
+.hide { display:none;}
 .App {
     display: flex;
     flex-flow: row wrap;
