--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,10 +1,10 @@
+html {background: #F7F7F7 }
 body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
 .hide { display:none;}
 .App {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    background:#F7F7F7
 }
 
 .App > * {
