--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 html {background: #F7F7F7 }
 body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
 
+.icon {font-size:16px;}
 .field input, .field select {border:1px solid #D5D5D5; padding:5px}
 .field select {width:200px}
 
@@ -27,7 +28,7 @@ header h1{color:#fff; font-size:20px}
 .field {background:#fff; border:1px solid #D5D5D5; padding:30px}
 .field input {border:0 none;}
 .add-button button {border:0 none; background:none; font-size:20px; position: absolute; right:0}
-.remove button{border:0 none; background:none; font-size:18px;}
+.remove button{border:0 none; background:none;}
 .editable-functions { text-align:right; padding:10px 0;}
 .editable-functions div.type  {float:left; }
 .editable-functions .float-right {float:right;}
