--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -45,7 +45,7 @@ header h1{color:#fff; font-size:20px}
 
     button {
         cursor: pointer;
-        border: none; background:none; font-size:20px; position: absolute; right:0;
+        border: none; background:none; font-size:20px; right:0;
         .icon {font-size: 24px;}
     }
 }
