--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -107,3 +107,10 @@ header h1{color:#fff; font-size:20px}
     position:absolute;
     right:0;
 }
+
+.section-title{
+    background:#666;
+    color:#fff;
+    padding:20px;
+    margin:1em 0 ;
+}
