--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 html {background: #F7F7F7 }
 body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
 
-.icon {font-size:16px;}
+.icon {font-size:16px; cursor: pointer;}
 .field input, .field select {border:1px solid #D5D5D5; padding:5px}
 .field select {width:200px}
 label {font-weight:bold}
