--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,6 @@
+$large_font: 22px;
+$disabled_colour: #d5d5d5;
+
 html {background: #F7F7F7 }
 body * { font-family: 'Open Sans', sans-serif; font-size:12px; color:#000000DE;}
 
@@ -31,7 +34,49 @@ header h1{color:#fff; font-size:20px}
         color: #D5D5D5;
     }
 }
-#form-name { font-size:24px; border:0 none; margin:0 }
+.section-title {
+    display: flex;
+    flex-direction: row;
+    background-color: #fff;
+    margin: 0 auto;
+    width: 80%;
+
+    .current-section {
+        color: #fff;
+        background-color: #595959;
+        font-size: $large_font;
+        padding: 1rem;
+    }
+
+    .section-buttons {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        .row {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            flex: 1;
+        }
+
+        button {
+            border: none;
+            background: none;
+
+            i {
+                font-size: $large_font;
+            }
+
+            &:disabled {
+                i {
+                    color: $disabled_colour;
+                }
+            }
+        }
+    }
+}
+#form-name { font-size: $large_font; border:0 none; margin:0 }
 
 /* Edit mode */
 .field {background:#fff; border:1px solid #D5D5D5; padding:30px}
@@ -45,7 +90,7 @@ header h1{color:#fff; font-size:20px}
     button {
         cursor: pointer;
         border: none; background:none; font-size:36px;
-        .icon {font-size: 24px;}
+        .icon {font-size: $large_font;}
     }
 }
 .remove button{border:0 none; background:none;}
@@ -93,9 +138,16 @@ header h1{color:#fff; font-size:20px}
 .content {
     flex: 1;
     padding:0;
+
+    & > * {
+        margin-bottom: 1rem;
+    }
 }
 
-.section {margin: 0 auto; width:80%;}
+.section {
+    margin: 0 auto; 
+    width:80%;
+}
 .display-mode {
    position: relative;
 }
@@ -104,4 +156,8 @@ header h1{color:#fff; font-size:20px}
     color: red;
     position:absolute;
     right:0;
+}
+
+i.fa {
+    cursor: pointer;
 }
