--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -100,6 +100,10 @@ header h1{color:#fff; font-size:20px}
     border:1px solid #D5D5D5; 
     padding:30px;
     margin-bottom: 1rem;
+
+    h3 {
+        font-size: $large_font;
+    }
 }
 .field input {border:0 none; border-bottom:1px solid #D5D5D5; height:40px; width:100%}
 .add-button {
@@ -110,9 +114,20 @@ header h1{color:#fff; font-size:20px}
     margin:10px 0;
 
     button {
+        display: flex;
+        align-items: center;
+
         cursor: pointer;
-        border: none; background:none; font-size:36px;
-        .icon {font-size: $medium_font;}
+        border: none; background:none;
+        .icon {
+            font-size: $medium_font;
+            padding-right: 5px;
+        }
+
+        span {
+            font-size: 1rem;
+            font-weight: bold;
+        }
     }
 }
 
